--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "next": "latest",
+    "next-auth": "^4.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.30.0",
